Add readme with notes

--- a/python_concurrency.ipynb
+++ b/python_concurrency.ipynb
@@ -109,7 +109,7 @@
     "        time.sleep(4)\n",
     "        self.order_taken = True\n",
     "        waiter.take_order()\n",
-    "        print(f\"{self.name} has given it's order to {waiter.name}\")\n",
+    "        print(f\"{self.name} has given its order to {waiter.name}\")\n",
     "\n",
     "tables = [Table(\"A\"), Table(\"B\"), Table(\"C\"), Table(\"D\"), Table(\"E\")]\n",
     "waiter = Waiter(\"John Doe\")\n",
@@ -160,7 +160,7 @@
     "        time.sleep(4)\n",
     "        self.order_taken = True\n",
     "        waiter.take_order()\n",
-    "        print(f\"{self.name} has given it's order to {waiter.name}\")\n",
+    "        print(f\"{self.name} has given its order to {waiter.name}\")\n",
     "\n",
     "tables = [Table(\"A\"), Table(\"B\"), Table(\"C\"), Table(\"D\"), Table(\"E\")]\n",
     "waiter = Waiter(\"John Doe\")\n",
@@ -456,7 +456,7 @@
     "        # Execution will resume after 4 s.\n",
     "        self.order_taken = True\n",
     "        waiter.take_order()\n",
-    "        print(f\"{self.name} has given it's order to {waiter.name}\")\n",
+    "        print(f\"{self.name} has given its order to {waiter.name}\")\n",
     "\n",
     "tables = [Table(\"A\"), Table(\"B\"), Table(\"C\"), Table(\"D\"), Table(\"E\")]\n",
     "waiter = Waiter(\"John Doe\")\n",
